Version 5.90.0.11
Added flrandom and unsafe-flrandom
xml: added a #:insert-newlines? argument to write-xexpr
racket/contract: added channel/c

Version 5.90.0.10
Changed serializable-struct, etc. to provide deserialized-info:...
 through a derialized-info submodule
Added chaperone-channel and impersonate-channel
Change string->path-element and bytes->path-element to raise an
 exception for an empty [byte-]string argument
Change path-replace-suffix to raise an excpetion when a path element
 would be made empty
racket/runtime-path: added runtime-require

Version 5.90.0.9
Allow hash table chaperones and impersonators to support efficient
 hash-clear and hash-clear!
setup/collection-name: added
syntax/unsafe/for-transform: added
raco pkg install with no arguments installs the current directory.

Version 5.90.0.6
Added path<?, symbol<?
Added hash-copy-clear

Version 5.90.0.4
Add current-library-collection-links, find-library-collection-links
Changed module search to use current-library-collection-paths
 before collection link files by default
Changed use-user-specific-search-paths and use-collection-link-paths
 to affect only find-library-collection-paths and
 find-library-collection-links
Removed restriction against handle-evt? arguments to wrap-evt,
 handle-evt. and chaperone-evt

Version 5.90.0.3
Base user directoy paths on an installation name instead
 of the Racket version string
Remove "shared" links and package scope
raco pkg install: --link is default for directory source; added
 --copy

Version 5.90.0.2
Added #%declare
Cross-phase persistent modules must be declared with
 (#%declare #:cross-phase-persistent)
Added hash-clear, hash-clear!, and hash-empty?

Version 5.90.0.1
Added "share" directory, moved "pkgs" there; moved "collects"
 back out of "lib"
setup/dirs: added find-share-dir, find-user-share-dir
ffi/unsafe: added array-type and in-array

Version 5.3.900.7
Changed equal? to work on module path index values
Added 'fs-change mode to system-type
