@@ -13,21 +13,24 @@
          (prefix-in setup: setup/setup)
          (for-syntax racket/base))
 
-(define (setup no-setup? setup-collects jobs)
+(define (setup what no-setup? setup-collects jobs)
   (unless (or (eq? setup-collects 'skip)
               no-setup?
               (not (member (getenv "PLT_PKG_NOSETUP") '(#f ""))))
     (define installation? (eq? 'installation (current-pkg-scope)))
-    (setup:setup
-     #:make-user? (not installation?)
-     #:avoid-main? (not installation?)
-     #:collections (and setup-collects
-                        (map (lambda (s)
-                               (if (list? s) s (list s)))
-                             setup-collects))
-     #:tidy? #t
-     #:make-doc-index? #t
-     #:jobs jobs)))
+    (unless (setup:setup
+             #:make-user? (not installation?)
+             #:avoid-main? (not installation?)
+             #:collections (and setup-collects
+                                (map (lambda (s)
+                                       (if (list? s) s (list s)))
+                                     setup-collects))
+             #:tidy? #t
+             #:make-doc-index? #t
+             #:jobs jobs)
+      ((current-pkg-error)
+       "packages ~a, although setup reported errors"
+       what))))
 
 (define ((pkg-error cmd) . args)
   (apply raise-user-error
@@ -191,7 +194,7 @@
                                   #:link-dirs? link-dirs?
                                   (for/list ([p (in-list sources)])
                                     (pkg-desc p a-type* name checksum #f))))))
-                (setup no-setup setup-collects jobs)))]
+                (setup "installed" no-setup setup-collects jobs)))]
             ;; ----------------------------------------
             [update
              "Update packages"
@@ -246,7 +249,7 @@
                                  #:update-implies? (not ignore-implies)
                                  #:strip (or (and source 'source) (and binary 'binary))
                                  #:link-dirs? link-dirs?))))
-                (setup no-setup setup-collects jobs)))]
+                (setup "updated" no-setup setup-collects jobs)))]
             ;; ----------------------------------------
             [remove
              "Remove packages"
@@ -270,7 +273,7 @@
                                #:demote? demote
                                #:auto? auto
                                #:force? force)))
-                (setup no-setup setup-collects jobs)))]
+                (setup "removed" no-setup setup-collects jobs)))]
             ;; ----------------------------------------
             [show
              "Show information about installed packages"
@@ -345,7 +348,7 @@
                                   #:ignore-checksums? ignore-checksums
                                   #:use-cache? (not no-cache)
                                   #:strip (or (and source 'source) (and binary 'binary))))))
-                (setup no-setup setup-collects jobs)))]
+                (setup "migrated" no-setup setup-collects jobs)))]
             ;; ----------------------------------------
             [create
              "Bundle package from a directory or installed package"
