@@ -2,6 +2,7 @@ Version 5.90.0.11
 Added flrandom and unsafe-flrandom
 xml: added a #:insert-newlines? argument to write-xexpr
 racket/contract: added channel/c
+setup/setup: changed setup to return a boolean
 
 Version 5.90.0.10
 Changed serializable-struct, etc. to provide deserialized-info:...
